--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,6 +24,9 @@
                   </div>
                 </div>
               </div>
+              <div *ngIf="loading">
+                <p>Loading...</p>
+              </div>
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Login</button>
               </div>
